--- a/src/CommandAPI/CommandAPI.csproj
+++ b/src/CommandAPI/CommandAPI.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>346e0181-7f8b-4d99-a98d-ce24e65753f9</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
