--- a/src/CommandAPI/appsettings.Development.json
+++ b/src/CommandAPI/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": 
+  {
+    "MySQLConnection":"Server=localhost; Database=CmdAPI;"
   }
 }
