--- a/src/CommandAPI/appsettings.Development.json
+++ b/src/CommandAPI/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
   "ConnectionStrings": 
   {
-    "MySQLConnection":"Server=localhost; Database=CmdAPI;"
+    "MySQLConnection":"Server=localhost; Database=CmdAPI; Uid=trico; Pwd=Genesis91"
   }
 }
